# financial-ai-contracts

./: .gitattributes  .gitignore  ACCEPTANCE_CRITERIA.md  CHANGELOG.md  CONTRACT_AUTHORING_GUIDE.md  CONTRIBUTING.md  DATA_MODEL.md  LIMITATIONS.md  MIGRATION_GUIDE.md  PLAN.md  README.md  SCHEMA_CHANGELOG.md  SECURITY.md  SPEC.md  VERSIONING.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: CANONICALIZATION.md  INTEGRATION_GUIDE.md
fixtures/golden/: vectors.jsonl
fixtures/invalid/: answerable-without-answer.json  bad-currency.json  bounding-box-order.json  cash-flow-before-valuation.json  cash-flow-order.json  completion-before-start.json  duplicate-metric.json  insufficient-approve.json  naive-timestamp.json  noncanonical-decimal.json  risk-expired-at-issue.json  uint256-overflow.json  unanswerable-with-answer.json  unknown-field.json  valid-time-order.json
fixtures/migrations/: evidence-unit-0.1.0.json  risk-attestation-0.1.0.json
fixtures/valid/: benchmark-case.json  evidence-unit.json  experiment-record.json  risk-attestation.json  valuation-scenario.json
reports/v0.1/: CONTRACT_CATALOG.md  CROSS_LANGUAGE_REPORT.md  LIMITATIONS.md  MIGRATION_REPORT.md  VALIDATION_REPORT.md  summary.json
schemas/v1/: benchmark-case.schema.json  evidence-unit.schema.json  (+1 more)
scripts/: check-artifacts.py  compile-solidity.mjs  generate-fixtures.py  sync-schemas.py
solidity/: ABI_MAPPING.md
tests/: conftest.py  test_canonical_and_abi.py  test_cli_and_reports.py  test_migrations.py  test_schemas_and_models.py  test_semantics.py
(+23 files in other folders)
