[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-ai-contracts"
version = "0.1.0"
description = "Versioned cross-language contracts for evidence-grounded financial AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Elian Chyndale" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "jsonschema>=4.23,<5",
  "pydantic>=2.9,<3",
]

[project.optional-dependencies]
dev = [
  "eth-abi>=5.2,<6",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-jsonschema>=4.23",
]

[project.scripts]
financial-ai-contracts = "financial_ai_contracts.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
financial_ai_contracts = ["py.typed", "schema_data/**/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/financial_ai_contracts"]
